--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "copy-filepath-with-line-numbers",
   "main": "./lib/copy-filepath-with-line-numbers",
-  "version": "1.0.0",
+  "version": "2.2.0",
   "description": "This is a small package that can copy the current file path(relative) and line number(s) to clipboard for later use",
   "keywords": [
+    "copy",
+    "path",
+    "file path",
+    "line numbers"
   ],
   "activationCommands": {
     "atom-workspace": "copy-filepath-with-line-numbers:relative"
@@ -13,6 +17,5 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
